src/objects/Account_Banking_System_Classification__c.object
<CustomObject>
    <description>Account Banking System Classification Object</description>
    <fields>
        <fullName>Unique_Id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <description>a relationship with account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Banking System Classification</relationshipLabel>
        <relationshipName>Account_Banking_System_Classification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>banking_system_classification_desc__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>banking_system_classification_quota_per__c</fullName>
        <label>Classification percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>banking_system_classification_type__c</fullName>
        <label>Classification code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Classification date</label>
        <type>Date</type>
    </fields>
    <label>Clasificación SBS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>ABSC-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clasificación SBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>